// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption should render with some offscreen text 1`] = `
.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
  padding: 0 0.5rem 0;
  width: 100%;
  width: -webkit-calc(100% - 0.5rem);
  width: -moz-calc(100% - 0.5rem);
  width: -o-calc(100% - 0.5rem);
  width: calc(100% - 0.5rem);
  margin: 0.5rem 0 0 0.5rem;
  border-left: 1px solid #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin: 0.5rem 0 0 0.5rem;
    padding: 0 1rem 0 0.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    width: 100%;
    margin: 0.5rem 0 0;
    padding: 0 0 0 0.5rem;
  }
}

.emotion-2 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-2 > p:last-child {
  padding-bottom: 0;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <figcaption
    class="emotion-2 emotion-3"
    dir="ltr"
  >
    This is some Caption text
    <span
      class="emotion-0 emotion-1"
    >
      Some offscreen text
    </span>
  </figcaption>
</div>
`;

exports[`Caption should render with some offscreen text and arabic script typography values 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
  padding: 0 0.5rem 0;
  width: 100%;
  width: -webkit-calc(100% - 0.5rem);
  width: -moz-calc(100% - 0.5rem);
  width: -o-calc(100% - 0.5rem);
  width: calc(100% - 0.5rem);
  margin: 0.5rem 0 0 0.5rem;
  border-left: 1px solid #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-2 {
    margin: 0.5rem 0 0 0.5rem;
    padding: 0 1rem 0 0.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-2 {
    width: 100%;
    margin: 0.5rem 0 0;
    padding: 0 0 0 0.5rem;
  }
}

.emotion-2 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.emotion-2 > p:last-child {
  padding-bottom: 0;
}

<div>
  <figcaption
    class="emotion-2 emotion-3"
    dir="ltr"
  >
    هذا هو بعض النص التسمية التوضيحي
    <span
      class="emotion-0 emotion-1"
    >
      Some offscreen text
    </span>
  </figcaption>
</div>
`;
